--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
 
         canvas {
             position: absolute;
+            top: 0;
+            left: 0;
+            cursor: none;
+        }
+
+        #timer {
+            width: 100vw;
+            height: 100vh;
+            pointer-events: none;
         }
 
         .lines {
@@ -60,12 +69,15 @@
 </head>
 <body>
 
+    <!-- <div id="timer">0:00</div> -->
+
     <canvas></canvas>
 
 </body>
 
 <script src="draw.js"></script>
 <script src="input.js"></script>
+<script src="timer.js"></script>
 <script src="player.js"></script>
 
 <script>
